--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=FoodpandaApp
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:XsReh5gq1QA/jA4WkvGwJ6UzfqjnfKJQldPEPKof5rs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -23,10 +23,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ecommerce_app
+DB_DATABASE=foodpanda-app
 DB_USERNAME=root
 DB_PASSWORD=
 
+SESSION_COOKIE=foodpanda_session
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
